Grok changes
************

0.14 (unreleased)
=================

...

0.13 (2008-06-23)
=================

Restructuring
-------------

* The basic component base classes (``Adapter``, ``MultiAdapter``,
  ``GlobalUtility``), their grokkers, as well as many of the basic
  directives have been factored out to a reusable
  ``grokcore.component`` package.

* Ported directives to Martian's new directive implementation.  As a
  result, many helper functions that were available from ``grok.util``
  were removed.  The functionality is mostly available from the
  directives themselves now.

* Refactored class grokkers to make use of Martian's new declarative
  way for retrieving directive data from classes, and Martian's new
  declarative way to write grokkers. See the `upgrade notes`_
  (``doc/upgrade.txt``) for more information.

Feature changes
---------------

* ``GrokTemplate`` sets up the namespaces for the template by calling
  ``default_namespace() ``on the view component the template is
  associated with. As a result, ``ViewletManagers`` and ``Viewlet``
  can now push in the ``viewletmanager`` and ``viewlet`` namespaces
  into the template.

* Updated tutorial section about grokproject to fit the latest changes.

* Added ``grok.traversable`` directive for easy traversal to attributes and
  methods.

* ``grok.require()`` can refer to subclasses of ``grok.Permission``
  directly, instead of their id. This, for one, avoids making typos in
  permission ids. Permission components *do* still need the
  grok.name() directive for defining the permission's id.

* Added an optional parameter ``data`` to the method ``url()`` that
  accepts a dictionary that is then converted to a query string. See

  http://grok.zope.org/documentation/how-to/generate-urls-with-the-url-function-in-views/view

* Added an ``OrderedContainer`` component.

* Introduced the new `sphinx`-based documentation engine. See
  grokdocs/README.txt for details.
